--- a/index.html
+++ b/index.html
@@ -11,63 +11,218 @@
   <body>
     <div class="container">
       <header>
-        <h1>TrekkIndia</h1>
-        <nav>
-          <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="services.html">WE PROVIDE</a></li>
-            <li><a href="portfolio.html">PORTFOLIO</a></li>
-          </ul>
-        </nav>
-        <div class="banner">
-          <h2>SERVICES WE SERVE...</h2>
-          <p>
-            We provide amazing trekks..
-          </p>
+        <div class="container_12">
+          <div class="navi grid_4 pull_5">
+            <h1>TrekkIndia</h1>
+          </div>
+          <div class="navi grid_8 push_6">
+            <nav>
+              <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">DESTINATIONS</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </header>
+
+      <div class="banner">
+        <h2>SERVICES WE SERVE...</h2>
+        <p>
+          We provide amazing trekks..
+        </p>
+      </div>
+
+      <div class="marque">
+        <marquee>
+          <img src="../images/marque1.jpg" alt="" />
+          <img src="../images/marque3.jpg" alt="" />
+          <img src="../images/marque4.jpg" alt="" />
+          <img src="../images/marque5.jpg" alt="" />
+          <img src="../images/marque6.jpg" alt="" />
+        </marquee>
+      </div>
+      <hr><hr>
       <div class="main container_12">
-        <div class="grid_4">
-          <div class="">
+        <div class="grid_4 pull_2">
+          <div class="why">
             <img src="../images/img1.jpg" alt="" />
           </div>
-          <h3>Why choose us</h3>
+          <h3 class="headwhy">WHAT WE OFFER</h3>
           <p>
-            Because we are Reliable.
+            <b>SPECTACULAR DESTINATIONS</b>
           </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Eligendi rem, facilis nobis voluptatum est voluptatem
-             accusamus molestiae eaque perspiciatis mollitia.
+          <p class="txt">
+            What we offer is specific - unforgettable hiking vacations - but our focus is broad in
+             terms of destinations and trip styles. We have a tour that fits nearly anyone who loves
+              to hike in world-renowned, breathtaking landscapes.
           </p>
         </div>
         <div class="grid_4">
-          <div class="">
+          <div class="why">
             <img src="../images/img2.jpg" alt="" />
           </div>
-          <h3>Our mission</h3>
+          <h3 class="headwhy">OUR TEAM</h3>
           <p>
-            To Redefine your Brand.
+            <b>EXTRAORDINARY GUIDES</b>
           </p>
-          <p>
-            Quos, non, esse eligendi ab accusantium voluptatem. Maxime
-             eligendi beatae, atque tempora ullam. Vitae delectus
-             quia, consequuntur rerum molestias quo.
+          <p class="txt">
+            The quality of your guide is the single most important factor that creates a
+            truly fantastic experience on any outdoor adventure tour. It's for this reason
+            we are committed to hiring and training the best guides in the industry.
           </p>
         </div>
-        <div class="grid_4">
-          <div class="">
+        <div class="grid_4 push_2">
+          <div class="why">
             <img src="../images/img3.jpg" alt="" />
           </div>
-          <h3>what do we do</h3>
+          <h3 class="headwhy">OUR MISSION</h3>
           <p>
-            Make our Customers Happy.
+            <b>ENRICH PEOPLE'S LIVES</b>
           </p>
-          <p>
-            Porro repellat vero sapiente amet vitae quibusdam
-            necessitatibus consectetur, labore totam. Accusamus
-             perspiciatis asperiores labore esse ab accusantium ea modi ut.
+          <p class="txt">
+            We put tremendous intention into ensuring our trips are exceptional with extraordinary
+             guides, top-of-the-line gear, smooth logistics and fantastic cuisine!Helping people "get out"
+              into the stunning landscapes we visit is inherently enriching for our guests.
           </p>
+        </div>
+      </div>
+
+      <hr><hr>
+
+      <div class="service container_12">
+        <div class="ser grid_4 pull_3">
+          <img src="../images/img4.jpg" alt="" />
+        </div>
+        <div class="ser grid_8 push_2">
+          <p class="servicehead">
+            OUR SERVICES
+          </p>
+          <p class="txt">
+            Trekking, Mountain Expedition, Peak Climbing ,Tour ,Hiking in Nepal , Jungle Safari, White Water Rafting,
+             City Sightseeing ,Hotel Booking , Agro Tour, Cultural Tour, Pilgrimage Tour ,Eco Tour, Village Tour,
+             Recreational Fishing ,Bird Watching ,Adventure Sports , Bycycle Riding, Elephant Polo , Hot air Ballooning,
+              Ticketing, Mountain Flight, Traditional Wedding Package, Honey Hunting,Yoga Ayurveda & Spa, Bungee Jump,
+               Volunteering, Photography,Car rental , Meeting/ Conference management , Tibet Tour, Bhutan Tour etc
+          </p>
+        </div>
+        <div class="ser grid_8 pull_3">
+          <p class="servicehead">
+            CLIENT SECURITY, OUY #1 PRIORITY
+          </p>
+          <p class="txt">
+            At Good Karma trekking, we take customer safety seriously by ensuring that all our guides and group leaders
+            have completed the wilderness first aid medical course and have the experienced needed to handle any potential
+            issues that may arise. Rest assured that our profession staff will take all medical and safety precautions,
+             as we make it a point of emphasis to provide safety and comfort for all of our guests.
+          </p>
+        </div>
+        <div class="ser grid_4 pull_2">
+          <img src="../images/img5.jpg" alt="" />
+        </div>
+        <div class="ser grid_4 pull_3">
+          <img src="../images/img6.jpg" alt="" />
+        </div>
+        <div class="ser grid_8 push_2">
+          <p class="servicehead">
+            MEALS AND ACCOMODATION
+          </p>
+          <p class="txt">
+            Good Karma ensures that nutritious, tasty and satisfying meals are provided at each stop along your trek.
+            Meals will be provided by reputable teahouses providing quality hygienic food while catering to any allergies
+             or food intolerances you may have. All food will meet safety standards and be safely and hygienically
+             prepared. Trekking accommodation will be in local mountain village teahouses during the trek while offering
+             hotels or bed and breakfasts in larger cities.
+          </p>
+        </div>
+      </div>
+
+      <table class="process">
+        <tr>
+          <td>
+            <div class="process1">
+              <a href="#"><img class="top" src="../images/register.jpg" alt="" /></a>
+            </div>
+          </td>
+          <td>
+            <div class="process2">
+              <a href="#"><img class="top" src="../images/reservation.jpg" alt="" /></a>
+            </div>
+          </td>
+          <td>
+            <div class="process3">
+              <a href="#"><img class="top" src="../images/bagpack.jpg" alt="" /></a>
+            </div>
+          </td>
+          <td>
+            <div class="process4">
+              <a href="#"><img class="top" src="../images/contact.jpg" alt="" /></a>
+            </div>
+          </td>
+        </tr>
+      </table>
+      <div class="footer">
+        <div class="container_12">
+          <div class="activities grid_2 pull_4">
+            <p class="heading">Activites</p>
+            <ul>
+              <li><a class="act" href="#">Trekking</a></li>
+              <li><a class="act" href="#">Mountain Expedition</a></li>
+              <li><a class="act" href="#">Peak Climbing</a></li>
+              <li><a class="act" href="#">Tours</a></li>
+              <li><a class="act" href="#">Hikking</a></li>
+              <li><a class="act" href="#">Jungle safari</a></li>
+              <li><a class="act" href="#">other activities</a></li>
+            </ul>
+          </div>
+          <div class="activities grid_4 pull_2">
+            <p class="heading">About US</p>
+            <ul>
+              <li><a class="act" href="#">Who are we</a></li>
+              <li><a class="act" href="#">Testimonials</a></li>
+              <li><a class="act" href="#">FAQs</a></li>
+              <li><a class="act" href="#">Travel news & update</a></li>
+            </ul>
+            <p class="heading">Destination</p>
+            <ul>
+              <li><a class="act" href="#">India</a></li>
+              <li><a class="act" href="#">Nepal</a></li>
+              <li><a class="act" href="#">Bhutan & Tibit</a></li>
+            </ul>
+          </div>
+          <div class="activities grid_2 pull_1">
+            <p class="heading">Follow US</p>
+            <table class="icon">
+              <tr>
+                <td>
+                  <a href="https://www.facebook.com" target="_blank"><img src="../images/fbLink.jpg" alt="" /></a>
+                </td>
+                <td>
+                  <a href="https://twitter.com" target="_blank"><img src="../images/Twitter-icon.jpg" alt="" /></a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="https://plus.google.com" target="_blank"><img src="../images/Google+.jpg" alt="" /></a>
+                </td>
+                <td>
+                  <a href="https://www.youtube.com" target="_blank"><img src="../images/Youtube_Icon.jpg" alt="" /></a>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <div class="activities grid_4 push_1">
+            <p class="heading">CONTACT</p>
+            <div class="address">
+              <p class="act">TrekkIndia Pvt Ltd</p>
+              <p class="act">C 81-C, Sector 8</p>
+              <p class="act">New Okhla Industrial Development Area Noida</p>
+              <p class="act">Uttar Pradesh , 201301</p>
+              <p class="act">+91-9212553109 /9810352536</p>
+              <p class="act">Email: info@trekkinginindia.com</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
