--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/text.css">
     <link rel="stylesheet" href="/css/960_12_col.css">
-    <title>Trekking</title>
+    <link rel="stylesheet" href="/css/style.css">
+
+    <title>TREKKINDIA</title>
   </head>
   <body>
     <div class="container">
@@ -18,9 +19,9 @@
           <div class="navi grid_8 push_6">
             <nav>
               <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">DESTINATIONS</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">home</a></li>
+                <li><a href="#">destination</a></li>
+                <li><a href="/pages/portfolio.html">portfolio</a></li>
               </ul>
             </nav>
           </div>
@@ -28,7 +29,7 @@
       </header>
 
       <div class="banner">
-        <h2>SERVICES WE SERVE...</h2>
+        <h2>services we serve...</h2>
         <p>
           We provide amazing trekks..
         </p>
@@ -45,13 +46,13 @@
       </div>
       <hr><hr>
       <div class="main container_12">
-        <div class="grid_4 pull_2">
+        <div class="subheader grid_4 pull_2">
           <div class="why">
             <img src="../images/img1.jpg" alt="" />
           </div>
-          <h3 class="headwhy">WHAT WE OFFER</h3>
+          <h3 class="headwhy">what we offer</h3>
           <p>
-            <b>SPECTACULAR DESTINATIONS</b>
+            <b>spectacular destination</b>
           </p>
           <p class="txt">
             What we offer is specific - unforgettable hiking vacations - but our focus is broad in
@@ -59,13 +60,13 @@
               to hike in world-renowned, breathtaking landscapes.
           </p>
         </div>
-        <div class="grid_4">
+        <div class="subheader grid_4">
           <div class="why">
             <img src="../images/img2.jpg" alt="" />
           </div>
-          <h3 class="headwhy">OUR TEAM</h3>
+          <h3 class="headwhy">our team</h3>
           <p>
-            <b>EXTRAORDINARY GUIDES</b>
+            <b>extraordinary guides</b>
           </p>
           <p class="txt">
             The quality of your guide is the single most important factor that creates a
@@ -73,13 +74,13 @@
             we are committed to hiring and training the best guides in the industry.
           </p>
         </div>
-        <div class="grid_4 push_2">
+        <div class="subheader grid_4 push_2">
           <div class="why">
             <img src="../images/img3.jpg" alt="" />
           </div>
-          <h3 class="headwhy">OUR MISSION</h3>
+          <h3 class="headwhy">our mission</h3>
           <p>
-            <b>ENRICH PEOPLE'S LIVES</b>
+            <b>enrich people's life</b>
           </p>
           <p class="txt">
             We put tremendous intention into ensuring our trips are exceptional with extraordinary
@@ -97,7 +98,7 @@
         </div>
         <div class="ser grid_8 push_2">
           <p class="servicehead">
-            OUR SERVICES
+            our services
           </p>
           <p class="txt">
             Trekking, Mountain Expedition, Peak Climbing ,Tour ,Hiking in Nepal , Jungle Safari, White Water Rafting,
@@ -109,7 +110,7 @@
         </div>
         <div class="ser grid_8 pull_3">
           <p class="servicehead">
-            CLIENT SECURITY, OUY #1 PRIORITY
+            client security, our #1 priority
           </p>
           <p class="txt">
             At Good Karma trekking, we take customer safety seriously by ensuring that all our guides and group leaders
@@ -126,7 +127,7 @@
         </div>
         <div class="ser grid_8 push_2">
           <p class="servicehead">
-            MEALS AND ACCOMODATION
+            meals and accomodation
           </p>
           <p class="txt">
             Good Karma ensures that nutritious, tasty and satisfying meals are provided at each stop along your trek.
@@ -142,29 +143,29 @@
         <tr>
           <td>
             <div class="process1">
-              <a href="#"><img class="top" src="../images/register.jpg" alt="" /></a>
+              <a class="top" href="#">Register</a>
             </div>
           </td>
           <td>
             <div class="process2">
-              <a href="#"><img class="top" src="../images/reservation.jpg" alt="" /></a>
+              <a class="top" href="#">Reservation</a>
             </div>
           </td>
           <td>
             <div class="process3">
-              <a href="#"><img class="top" src="../images/bagpack.jpg" alt="" /></a>
+              <a class="top" href="#">BagPack List</a>
             </div>
           </td>
           <td>
             <div class="process4">
-              <a href="#"><img class="top" src="../images/contact.jpg" alt="" /></a>
+              <a class="top" href="#">Contact</a>
             </div>
           </td>
         </tr>
       </table>
       <div class="footer">
         <div class="container_12">
-          <div class="activities grid_2 pull_4">
+          <div class="activities grid_2 pull_5">
             <p class="heading">Activites</p>
             <ul>
               <li><a class="act" href="#">Trekking</a></li>
@@ -176,7 +177,7 @@
               <li><a class="act" href="#">other activities</a></li>
             </ul>
           </div>
-          <div class="activities grid_4 pull_2">
+          <div class="activities grid_4 pull_1">
             <p class="heading">About US</p>
             <ul>
               <li><a class="act" href="#">Who are we</a></li>
@@ -191,7 +192,7 @@
               <li><a class="act" href="#">Bhutan & Tibit</a></li>
             </ul>
           </div>
-          <div class="activities grid_2 pull_1">
+          <div class="activities grid_2 push_2">
             <p class="heading">Follow US</p>
             <table class="icon">
               <tr>
@@ -212,8 +213,8 @@
               </tr>
             </table>
           </div>
-          <div class="activities grid_4 push_1">
-            <p class="heading">CONTACT</p>
+          <div class="activities grid_4 push_5">
+            <p class="heading">Contact</p>
             <div class="address">
               <p class="act">TrekkIndia Pvt Ltd</p>
               <p class="act">C 81-C, Sector 8</p>
