--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>DESTINATIONS</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/960_12_col.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/text.css">
+    <link rel="stylesheet" href="../css/960_12_col.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
@@ -15,9 +17,9 @@
         <div class="navi grid_8 push_6">
           <nav>
             <ul>
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">DESTINATIONS</a></li>
-              <li><a href="#">PORTFOLIO</a></li>
+              <li><a href="/index.html">home</a></li>
+              <li><a href="/index.html">destination</a></li>
+              <li><a href="#">portfolio</a></li>
             </ul>
           </nav>
         </div>
@@ -25,12 +27,12 @@
     </header>
 
     <div class="banner">
-      <h2>SERVICES WE SERVE...</h2>
+      <h2>services we serve...</h2>
       <p>
         We provide amazing trekks..
       </p>
     </div>
-    
+
     <div class="trekks_container">
       <p class="heading">
         TREKKS IN 2106
@@ -99,9 +101,9 @@
       <div class="type grid_3">
         <h3>TREKKING</h3>
         <p>
-          India is known for its world-class trekking and scenic beauty found only in the powerful Himalayan Mountain Range.
+          India is known for its world-class trekking and scenic beauty found only in Himalayan Mountain Range.
         </p>
-        <a href="#"><img src="../images/viewButton.jpg" alt="" /></a>
+        <a class="a" href="#">view trips</a>
       </div>
       <div class="type grid_3">
         <img src="../images/typeImg2.jpg" alt="" />
@@ -109,16 +111,16 @@
       <div class="type grid_3">
         <h3>MOUNTAIN EXPEDITION</h3>
         <p>
-          Mountain expeditions are arranged to allow you to explore the Himalayas for an extended period of time.
+          These are arranged to allow you to explore Himalayas for extended period of time.
         </p>
-        <a href="#"><img src="../images/viewButton.jpg" alt="" /></a>
+        <a class="a" href="#">view trips</a>
       </div>
       <div class="type grid_3">
         <h3>PEAK CLIMBING</h3>
         <p>
-          Peak climbing combines trekking to the top of a mountain to experience thrill of summiting world’s highest peaks.
+          This combines trekking to top of mountain to experience thrill of summiting world’s highest peaks.
         </p>
-        <a href="#"><img src="../images/viewButton.jpg" alt="" /></a>
+        <a class="a" href="#">view trips</a>
       </div>
       <div class="type grid_3">
         <img src="../images/typeImg4.jpg" alt="" />
@@ -128,7 +130,7 @@
         <p>
           Tourist flock to India for its unique architecture, diverse culture, interesting people and breathtaking beauty.
         </p>
-        <a href="#"><img src="../images/viewButton.jpg" alt="" /></a>
+        <a class="a" href="#">view trips</a>
       </div>
       <div class="type grid_3">
         <img src="../images/typeImg3.jpg" alt="" />
@@ -137,7 +139,7 @@
     <hr><hr>
     <div class="footer">
       <div class="container_12">
-        <div class="activities grid_2 pull_4">
+        <div class="activities grid_2 pull_5">
           <p class="heading">Activites</p>
           <ul>
             <li><a class="act" href="#">Trekking</a></li>
@@ -149,7 +151,7 @@
             <li><a class="act" href="#">other activities</a></li>
           </ul>
         </div>
-        <div class="activities grid_4 pull_2">
+        <div class="activities grid_4 pull_1">
           <p class="heading">About US</p>
           <ul>
             <li><a class="act" href="#">Who are we</a></li>
@@ -164,7 +166,7 @@
             <li><a class="act" href="#">Bhutan & Tibit</a></li>
           </ul>
         </div>
-        <div class="activities grid_2 pull_1">
+        <div class="activities grid_2 push_2">
           <p class="heading">Follow US</p>
           <table class="icon">
             <tr>
@@ -185,8 +187,8 @@
             </tr>
           </table>
         </div>
-        <div class="activities grid_4 push_1">
-          <p class="heading">CONTACT</p>
+        <div class="activities grid_4 push_5">
+          <p class="heading">Contact</p>
           <div class="address">
             <p class="act">TrekkIndia Pvt Ltd</p>
             <p class="act">C 81-C, Sector 8</p>
